# QvPlugin-Trojan

./: .gitignore  .gitmodules  CMakeLists.txt  QvSimplePlugin.pro  README.md  SimplePlugin.cpp  SimplePlugin.hpp  TrojanPlugin.cpp  TrojanPlugin.hpp  resx.qrc
.github/workflows/: build-simpleplugin-qmake.yml  build-simpleplugin-qt6.yml  build-simpleplugin.yml  hashfile.yml
cmake/: trojan.cmake
core/: Common.hpp  EventHandler.cpp  EventHandler.hpp  Kernel.cpp  Kernel.hpp  Serializer.cpp  Serializer.hpp
ui/: TrojanOutboundEditor.cpp  TrojanOutboundEditor.hpp  TrojanOutboundEditor.ui  UIInterface.hpp
